--- a/rcps/nhchkn.html
+++ b/rcps/nhchkn.html
@@ -5,7 +5,7 @@
         <title>Nashville Hot Chicken</title>
     </head>
     <body>
-        <h1>Nashville Hot Chicken</h1>
+        <h1>Nashville Hot Chicken Breasts</h1>
         <img src="../imgs/chkn.jpg" alt="Nashville Hot Chicken">
         <h2>Baked Nashville Hot Chicken Breasts</h2>
         <h3>Ingredients:</h3>
